@@ -1,3 +1,4 @@
+* Documentation updates from Dave Mills.
 * Include (4.2.4p5) 2008/08/17 Released by Harlan Stenn <stenn@ntp.org>
 * [Bug 861] leap info was not being transmitted.
 * [Bug 1046] refnumtoa.c is using the wrong header file.
